--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "gh-pages": "^2.0.1",
     "jsonwebtoken": "^8.5.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.3",
